--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,15 @@
     package="com.maxpilotto.esame2017">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".App">
+        android:theme="@style/AppTheme">
 
-        <activity android:name=".activities.Home01" >
+        <activity android:name=".activities.Home01">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,6 +21,10 @@
         <activity android:name=".activities.Ord01" />
         <activity android:name=".activities.List01" />
         <activity android:name=".activities.Ord02" />
+
+        <provider
+            android:name=".persistance.OrderProvider"
+            android:authorities="com.maxpilotto.esame2017.database.ContentProvider" />
 
     </application>
 
